--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,11 @@ name = "vecrs"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+opt-level = 3
+
 [profile.release]
+opt-level = 3
 lto = true
 
 [dependencies]
