--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ opt-level = 3
 lto = true
 
 [dependencies]
+rand = "0.8.5"
 
 [dev-dependencies]
 criterion = { version = "0.4", features = ["html_reports"] }
